added network hosts and signing
