# pkg/models/network.go
@@ -17,15 +17,15 @@ type Network struct {
 	Groups           datatypes.JSONSlice[string] `json:"groups" gorm:"type:json;default:'[]'" swaggertype:"array,string"`   // List of groups for access control, restricting subordinate certificates' groups.
 	Encrypt          bool                        `json:"encrypt" gorm:"default:false"`                                      // Enables passphrase encryption for private keys. Default: true.
 	Passphrase       string                      `json:"passphrase" gorm:"size:255"`                                        // Passphrase used for encrypting the private key.
-	ArgonMemory      uint                        `json:"argon_memory" gorm:"default:2097152"`                               // Argon2 memory parameter in KiB for encrypted private key passphrase. Default: 2 MiB. (2*1024*1024)
-	ArgonIterations  uint                        `json:"argon_iterations" gorm:"default:2"`                                 // Number of Argon2 iterations for encrypting private key passphrase. Default: 2.
-	ArgonParallelism uint                        `json:"argon_parallelism" gorm:"default:4"`                                // Argon2 parallelism parameter for encrypting private key passphrase. Default: 4.
+	ArgonMemory      uint                        `json:"argonMemory" gorm:"default:2097152"`                                // Argon2 memory parameter in KiB for encrypted private key passphrase. Default: 2 MiB. (2*1024*1024)
+	ArgonIterations  uint                        `json:"argonIterations" gorm:"default:2"`                                  // Number of Argon2 iterations for encrypting private key passphrase. Default: 2.
+	ArgonParallelism uint                        `json:"argonParallelism" gorm:"default:4"`                                 // Argon2 parallelism parameter for encrypting private key passphrase. Default: 4.
 	Curve            string                      `json:"curve" gorm:"default:25519"`                                        // Cryptographic curve for key generation. Options include "25519" (default) and "P256".
 	Duration         time.Duration               `json:"duration" gorm:"default:17531" swaggertype:"number"`                // Certificate validity duration. Default: 2 years (17,531 hours). (time.Duration(time.Hour*8760))
 	Ca               []Certificate               `json:"ca,omitempty" gorm:"polymorphic:Owner;constraint:OnDelete:CASCADE"` // Associated Certificate Authorities (CA) for the network.
 	Hosts            []Host                      `json:"hosts,omitempty" gorm:"constraint:OnDelete:CASCADE"`                // Associated hosts for the network.
-	CreatedAt        time.Time                   `json:"created_at" gorm:"autoCreateTime"`
-	UpdatedAt        time.Time                   `json:"updated_at" gorm:"autoUpdateTime"`
+	CreatedAt        time.Time                   `json:"createdAt" gorm:"autoCreateTime"`
+	UpdatedAt        time.Time                   `json:"updatedAt" gorm:"autoUpdateTime"`
 }
 
 // DTO for create/update operations
@@ -37,10 +37,24 @@ type NetworkDto struct {
 	Duration         time.Duration               `json:"duration,omitempty" example:"17531" swaggertype:"number"`
 	Encrypt          bool                        `json:"encrypt,omitempty" example:"false"`
 	Passphrase       string                      `json:"passphrase" example:"orange-duck-walks-happy-sunset-92"`
-	ArgonMemory      uint                        `json:"argon_memory,omitempty" example:"2097152"`
-	ArgonIterations  uint                        `json:"argon_iterations,omitempty" example:"2"`
-	ArgonParallelism uint                        `json:"argon_parallelism,omitempty" example:"4"`
+	ArgonMemory      uint                        `json:"argonMemory,omitempty" example:"2097152"`
+	ArgonIterations  uint                        `json:"argonIterations,omitempty" example:"2"`
+	ArgonParallelism uint                        `json:"argonParallelism,omitempty" example:"4"`
 	Curve            string                      `json:"curve,omitempty" example:"25519" enums:"25519,X25519,Curve25519,CURVE25519,P256"`
+}
+
+func (n *Network) ValidCAs() []Certificate {
+	var validCAs []Certificate
+
+	for _, ca := range n.Ca {
+		if ca.Expired() {
+			continue
+		}
+
+		validCAs = append(validCAs, ca)
+	}
+
+	return validCAs
 }
 
 // Hooks
